# ucar

./: CMakeLists.txt  README.md  abschlussdetail.cpp  abschlussdetail.h  abschlussdetail.ui  adresse.cpp  adresse.h  buchung.cpp  buchung.h  buchungdialogmieter.cpp  buchungdialogmieter.h  buchungdialogmieter.ui  buchungdialogvermieter.cpp  buchungdialogvermieter.h  buchungdialogvermieter.ui  buchungreg.cpp  buchungreg.h  buchungreg.ui  buchungsansicht.cpp  buchungsansicht.h  buchungsansicht.ui  buchungsverwaltung.cpp  buchungsverwaltung.h  datenbank_verbindung.cpp  datenbank_verbindung.h  fahrzeug.cpp  fahrzeug.h  fahrzeugansicht.cpp  fahrzeugansicht.h  fahrzeugansicht.ui  fahrzeugdetail.cpp  fahrzeugdetail.h  fahrzeugdetail.ui  fahrzeugmodell.cpp  fahrzeugmodell.h  fahrzeugreg.cpp  fahrzeugreg.h  fahrzeugreg.ui  fahrzeugverwaltung.cpp  fahrzeugverwaltung.h  (+39 more)
Documentation/: Abschlusspräsentation.pptx  Anforderungsspezifikation.docx  Arbeitspakete_Projektstrukturplan.xlsx  Domänenmodell.docx  Funktionale_Anforderungen.odt  MS2.pptx  Projektmonitoring.docx  Projektplan.docx  RelationenenDiagramm.docx  Software_Architecture_Document.rtf  TestCase.xlsx  TestSuite.xlsx  Testplan.docx  Use-Cases_SWP.docx  Use_Case_Fully_dressed.odt  VergleichZeitaufwand.xlsx  ZeitDoku.xlsx
U-Car-db/: U-Car-db.db  U-Car-db.sqbpro
Webseite/: Bedienungsanleitung.docx  Website.md  index.html  styles.css
test/: CMakeLists.txt  test_buchen.cpp  test_datenbank_verbindung.cpp  test_fahrzeug_reg.cpp  test_main.cpp  test_personanmelden.cpp  test_personregistrieren.cpp  test_rechnung.cpp  test_stornieren.cpp  test_suchen.cpp
